[package]
name = "repo2md"
version = "0.1.2"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
ignore = "0.4.18"
log = "0.4.14"
env_logger = "0.9.0"
walkdir = "2.3.2"
indicatif = "0.17.0"
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"